@@ -21,6 +21,9 @@ sub check_life { ... }
 sub init_life { ... }
 sub get_life { ... }
 
+sub check_suspend { ... }
+sub set_suspend { ... }
+
 sub _build_features
 {
 	return {
@@ -45,6 +48,10 @@ sub _build_features
 					value => 5,
 				},
 			},
+		},
+		suspend => {
+			desc => 'Suspends the machine',
+			mode => 'w',
 		},
 	};
 }
